tests/ui/trait-bounds/false-span-in-trait-bound-label.stderr
error[E0277]: the trait bound `{integer}: A<_>` is not satisfied
  --> $DIR/false-span-in-trait-bound-label.rs:9:10
   |
LL |     A::f(1, "");
   |     ---- ^ the trait `A<_>` is not implemented for `{integer}`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/false-span-in-trait-bound-label.rs:4:1
   |
LL | trait A<T> {
   | ^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
